NSLocale leaks in LocaleMac https://bugs.webkit.org/show_bug.cgi?id=97628

Reviewed by Kent Tamura.

We need to adopt the NSLocale object so it doesn't leak and
determineLocale() should return a NSLocale without additional retain.

No new tests.

* platform/text/mac/LocaleMac.mm:
(WebCore::determineLocale): Returns a RetainPtr<NSLocale>.
(WebCore::Locale::create):
(WebCore::LocaleMac::LocaleMac): m_locale should adopt the NSLocale object.
(WebCore::LocaleMac::create): LocaleMac constructor takes NSLocale without additional retain.


Canonical link: https://commits.webkit.org/118752@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132868 268f45cc-cd09-0410-ab3c-d52691b4dbfc